chore(CE): Fix typo in env example (#803)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Rails
 # ----------------------
-RAILS_ENV=production
+RAILS_ENV=development
 
 # HOST Configuration
 # ----------------------
@@ -30,7 +30,7 @@ REDIS_URL=redis://redis:6379/0
 # This environment variable is used to skip user email verification after signup.
 # Set to false for local testing. When set to true, ensure SMTP credentials are
 # configured correctly so that verification emails can be sent to users.
-USER_EMAIL_VERFICATION=false
+USER_EMAIL_VERIFICATION=false
 SMTP_HOST=yourdomain.com
 SMTP_ADDRESS=smtp.yourdomain.com
 SMTP_PORT=587
