--- a/ui/package.json
+++ b/ui/package.json
@@ -41,6 +41,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
+    "qs": "^6.14.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -60,6 +61,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
+    "@types/qs": "^6.9.18",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/toastr": "^2.1.43",
