--- a/server/Gemfile
+++ b/server/Gemfile
@@ -9,6 +9,7 @@ gem "aasm"
 gem "appsignal"
 gem "aws-sdk"
 gem "azure-blob"
+gem "google-cloud-storage", "~> 1.44"
 gem "groupdate"
 gem "interactor", "~> 3.0"
 
