fix(CE): Solid Worker Migrations (#940)
Co-authored-by: sangkum <sangit.kumar@squared.ai>

--- a/server/config/queue.yml
+++ b/server/config/queue.yml
@@ -5,14 +5,14 @@
 #   workers:
 #     - queues: "*"
 #       threads: 3
-#       processes: 1
+#       processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
 #       polling_interval: 0.1
-#
+
 # development:
-#  <<: *default
-#
+#   <<: *default
+
 # test:
-#  <<: *default
-#
+#   <<: *default
+
 # production:
-#  <<: *default
+#   <<: *default
