--- a/.github/workflows/server-docker-hub-push-tags-amd.yaml
+++ b/.github/workflows/server-docker-hub-push-tags-amd.yaml
@@ -2,12 +2,14 @@ name: Build and push Multiwoven server docker image to Docker Hub (AMD)
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - v*
+  workflow_run:
+    workflows: ["Release Workflow"]
+    types:
+      - completed
 
 jobs:
   docker-hub-push-on-merge:
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run && github.event.workflow_run.conclusion == 'success') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
