--- a/.github/workflows/sync-ce-commits.yaml
+++ b/.github/workflows/sync-ce-commits.yaml
@@ -54,20 +54,34 @@ jobs:
             BRANCH_NAME="cherry-pick-ce-commit-${sha}"
             git checkout -b $BRANCH_NAME
             git cherry-pick $sha || {
-              echo "Conflict in commit $sha, resolving manually."
-              git add .
-              git commit -am "Resolve conflict in cherry-pick of $sha and change the commit message"
+              if git diff --quiet; then
+                echo "Empty cherry-pick for commit $sha, skipping."
+                git cherry-pick --skip
+              else
+                echo "Conflict in commit $sha, resolving manually."
+                git add .
+                git commit -am "Resolve conflict in cherry-pick of $sha and change the commit message"
+              fi
             }
             git push --force --set-upstream origin $BRANCH_NAME
-            PR_TITLE="${COMMIT_MESSAGE}"
-            PR_BODY="This PR cherry-picks the CE commit ${sha} from the Enterprise repository. Commit author: ${AUTHOR_NAME} (${AUTHOR_EMAIL})"
-            AUTHOR_GH_USERNAME=$(gh api graphql -f query='query { search(query: "${AUTHOR_EMAIL}", type: USER, first: 1) { nodes { ... on User { login } } } }' -q '.data.search.nodes[0].login')
-            if [ -n "$AUTHOR_GH_USERNAME" ]; then
-              PR_BODY="${PR_BODY}\n\ncc @${AUTHOR_GH_USERNAME}"
-              gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME --assignee "$AUTHOR_GH_USERNAME"
+            
+            # Check if a PR for this branch already exists
+            existing_pr=$(gh pr list --head "$BRANCH_NAME" --state open --json number --jq '.[0].number')
+            if [ -n "$existing_pr" ]; then
+              echo "PR for branch $BRANCH_NAME already exists, skipping PR creation."
             else
-              gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME
+              PR_TITLE="${COMMIT_MESSAGE}"
+              PR_BODY="This PR cherry-picks the CE commit ${sha} from the Enterprise repository. Commit author: ${AUTHOR_NAME} (${AUTHOR_EMAIL})"
+              AUTHOR_GH_USERNAME=$(gh api graphql -f query='query { search(query: "${AUTHOR_EMAIL}", type: USER, first: 1) { nodes { ... on User { login } } } }' -q '.data.search.nodes[0].login')
+              if [ -n "$AUTHOR_GH_USERNAME" ]; then
+                PR_BODY="${PR_BODY}\n\ncc @${AUTHOR_GH_USERNAME}"
+                gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME --assignee "$AUTHOR_GH_USERNAME"
+              else
+                gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME
+              fi
             fi
+            
             git checkout main
             git branch -D $BRANCH_NAME
           done
+      
