--- a/.github/workflows/sync-ce-commits.yaml
+++ b/.github/workflows/sync-ce-commits.yaml
@@ -64,24 +64,28 @@ jobs:
               fi
             }
             git push --force --set-upstream origin $BRANCH_NAME
-            
-            # Check if a PR for this branch already exists
-            existing_pr=$(gh pr list --head "$BRANCH_NAME" --state open --json number --jq '.[0].number')
-            if [ -n "$existing_pr" ]; then
-              echo "PR for branch $BRANCH_NAME already exists, skipping PR creation."
+      
+            # Check if branch differs from main. If there are no commits, skip PR creation.
+            if [ -z "$(git log main..$BRANCH_NAME --oneline)" ]; then
+              echo "Branch $BRANCH_NAME is identical to main. Skipping PR creation."
             else
-              PR_TITLE="${COMMIT_MESSAGE}"
-              PR_BODY="This PR cherry-picks the CE commit ${sha} from the Enterprise repository. Commit author: ${AUTHOR_NAME} (${AUTHOR_EMAIL})"
-              AUTHOR_GH_USERNAME=$(gh api graphql -f query='query { search(query: "${AUTHOR_EMAIL}", type: USER, first: 1) { nodes { ... on User { login } } } }' -q '.data.search.nodes[0].login')
-              if [ -n "$AUTHOR_GH_USERNAME" ]; then
-                PR_BODY="${PR_BODY}\n\ncc @${AUTHOR_GH_USERNAME}"
-                gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME --assignee "$AUTHOR_GH_USERNAME"
+              # Check if a PR for this branch already exists
+              existing_pr=$(gh pr list --head "$BRANCH_NAME" --state open --json number --jq '.[0].number')
+              if [ -n "$existing_pr" ]; then
+                echo "PR for branch $BRANCH_NAME already exists, skipping PR creation."
               else
-                gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME
+                PR_TITLE="${COMMIT_MESSAGE}"
+                PR_BODY="This PR cherry-picks the CE commit ${sha} from the Enterprise repository. Commit author: ${AUTHOR_NAME} (${AUTHOR_EMAIL})"
+                AUTHOR_GH_USERNAME=$(gh api graphql -f query='query { search(query: "${AUTHOR_EMAIL}", type: USER, first: 1) { nodes { ... on User { login } } } }' -q '.data.search.nodes[0].login')
+                if [ -n "$AUTHOR_GH_USERNAME" ]; then
+                  PR_BODY="${PR_BODY}\n\ncc @${AUTHOR_GH_USERNAME}"
+                  gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME --assignee "$AUTHOR_GH_USERNAME"
+                else
+                  gh pr create --title "$PR_TITLE" --body "$PR_BODY" --base main --head $BRANCH_NAME
+                fi
               fi
             fi
-            
+      
             git checkout main
             git branch -D $BRANCH_NAME
           done
-      
