--- a/.github/workflows/server-docker-hub-push-tags-amd.yaml
+++ b/.github/workflows/server-docker-hub-push-tags-amd.yaml
@@ -1,19 +1,25 @@
-name: Build and push Multiwoven server docker image to Docker Hub (AMD)
+name: Build and push Multiwoven CE server docker image to Docker Hub (AMD)
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["Release Workflow"]
-    types:
-      - completed
+    inputs:
+      release_tag:
+        description: "Release tag to build"
+        required: true
+  repository_dispatch:
+    types: [trigger-image-push]
 
 jobs:
   docker-hub-push-on-merge:
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run && github.event.workflow_run.conclusion == 'success') }}
     runs-on: ubuntu-latest
+    env:
+      RELEASE_TAG: ${{ github.event.client_payload.tag || github.event.inputs.release_tag }}
+      RUN_LOGS_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ env.RELEASE_TAG }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -34,5 +40,23 @@ jobs:
           context: ./server
           file: ./server/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: multiwoven/multiwoven-server:${{ env.RELEASE_TAG }},multiwoven/multiwoven-server:latest
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Slack success notification
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data '{
+            "text": ":white_check_mark: *multiwoven-ce SERVER image build & push succeeded!*\n• Tag: `'"$RELEASE_TAG"'`\n• Triggered by: `${{ github.actor }}`\n• Logs_url: '"$RUN_LOGS_URL"'"
+          }' \
+          ${{ secrets.RELEASE_SLACK_WEBHOOK_URL }}
+
+      - name: Slack failure notification
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data '{
+            "text": ":x: *multiwoven-ce SERVER image build & push failed!*\n• Tag: `'"$RELEASE_TAG"'`\n• Triggered by: `${{ github.actor }}`\n• Logs_url: '"$RUN_LOGS_URL"'"
+          }' \
+          ${{ secrets.RELEASE_SLACK_WEBHOOK_URL }}
