--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,8 @@ services:
       - redis
       - temporal
     env_file: .env
+    volumes:
+      - ./integrations:/integrations
   multiwoven-ui:
     build:
       context: ./ui
@@ -89,6 +91,8 @@ services:
       - redis
       - temporal
     env_file: .env
+    volumes:
+      - ./integrations:/integrations
     command: sh -c "./app/temporal/cli/register_namespace && ./app/temporal/cli/worker"
 # Volumes for the database and redis
 volumes:
