--- a/server/Gemfile
+++ b/server/Gemfile
@@ -14,7 +14,7 @@ gem "interactor", "~> 3.0"
 
 gem "ruby-odbc", git: "https://github.com/Multiwoven/ruby-odbc.git"
 
-gem "multiwoven-integrations", "~> 0.21.2"
+gem "multiwoven-integrations", "~> 0.22.0", path: "../integrations"
 
 gem "temporal-ruby", github: "coinbase/temporal-ruby"
 
