--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
       - "8000:8000"
     depends_on:
       - multiwoven-server
+    env_file: .env
   # This section is for the Temporal Worker
   multiwoven-worker:
     build:
