--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -79,6 +79,8 @@ gem "tiny_tds"
 
 gem "MailchimpMarketing"
 
+gem "aws-sdk-bedrockruntime"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
