--- a/server/Gemfile
+++ b/server/Gemfile
@@ -43,6 +43,7 @@ gem "pundit"
 gem "ruby-saml"
 # Utilities
 gem "activerecord_json_validator", "~> 2.1.0"
+gem "acts-as-taggable-on", "~> 12.0"
 gem "bootsnap", require: false # Reduces boot time
 gem "counter_culture", "~> 3.3"
 gem "fugit"
