feat(CE): Add Pinecone Vector DB Destination connector (#1076)

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -81,6 +81,8 @@ gem "MailchimpMarketing"
 
 gem "aws-sdk-bedrockruntime"
 
+gem "pinecone"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
