--- a/server/Gemfile
+++ b/server/Gemfile
@@ -14,7 +14,7 @@ gem "interactor", "~> 3.0"
 
 gem "ruby-odbc", git: "https://github.com/Multiwoven/ruby-odbc.git"
 
-gem "multiwoven-integrations", "~> 0.23.2"
+gem "multiwoven-integrations", "~> 0.24.0"
 
 gem "temporal-ruby", github: "coinbase/temporal-ruby"
 
@@ -22,6 +22,7 @@ gem "data_migrate"
 gem "mysql2"
 gem "parallel"
 gem "pg", "~> 1.1"       # PostgreSQL Database
+gem "pinecone"
 gem "puma", ">= 5.0"     # Web server
 gem "rails", "~> 7.1.1"  # Core Rails gem
 
