--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -83,6 +83,8 @@ gem "aws-sdk-bedrockruntime"
 
 gem "pinecone"
 
+gem "intuit-oauth"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
