Resolve conflict in cherry-pick of 531bed50ed02e07d263e7fb55d45e9ea0802ad34 and change the commit message

--- a/server/.rubocop.yml
+++ b/server/.rubocop.yml
@@ -10,7 +10,9 @@ AllCops:
   TargetRubyVersion: 3.2
   Exclude:
     - 'db/migrate/**/*.rb'
+    - 'db/data/**/*.rb'
     - 'db/schema.rb'
+    - 'db/data_schema.rb'
     - 'vendor/**/*'
     - 'config/**/*'
     - 'log/**/*'
