Resolve conflict in cherry-pick of c194e6e31541c57b92cd044e07df5de57e7955fb and change the commit message

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -85,6 +85,8 @@ gem "pinecone"
 
 gem "intuit-oauth"
 
+gem "nokogiri"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
