Resolve conflict in cherry-pick of e940d8c29e9fbe4746819d2a7fabb321b7c2c1ec and change the commit message

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -50,6 +50,7 @@ gem "bootsnap", require: false # Reduces boot time
 gem "counter_culture", "~> 3.3"
 gem "fugit"
 gem "pg_query"
+gem "rack-attack"
 gem "tzinfo-data", platforms: %i[windows jruby] # Timezone data
 # Third-Party Tools for Monitoring, Error Reporting, etc.
 gem "newrelic_rpm"
