Resolve conflict in cherry-pick of 51bed29774ac436af1805429382ad8b6fef7fdcc and change the commit message

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -89,3 +89,7 @@ group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
 end
+
+gem "xmlrpc", "~> 0.3.3"
+
+gem "builder", "~> 3.3"
