--- a/server/Gemfile
+++ b/server/Gemfile
@@ -14,7 +14,7 @@ gem "interactor", "~> 3.0"
 
 gem "ruby-odbc", git: "https://github.com/Multiwoven/ruby-odbc.git"
 
-gem "multiwoven-integrations", "~> 0.30.4"
+gem "multiwoven-integrations", "~> 0.31.3"
 
 gem "temporal-ruby", github: "coinbase/temporal-ruby"
 
@@ -107,3 +107,5 @@ end
 gem "premailer-rails"
 
 gem "prometheus-client", "~> 4.2"
+
+gem "xmlrpc", "~> 0.3.3"
