--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,10 @@ on:
         required: true
         default: "minor"
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   prepare-changelog:
     name: Prepare changelog
