Resolve conflict in cherry-pick of 35e94da73311b3f0a1914e4b97f2b39be2cece06 and change the commit message

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -95,3 +95,9 @@ group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
 end
+
+gem "googleauth", "~> 1.11"
+
+gem "google-apis-drive_v3", "~> 0.67.0"
+
+gem "aws-sdk-textract", "~> 1.58"
