--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -91,6 +91,8 @@ gem "xmlrpc", "~> 0.3.3"
 
 gem "builder", "~> 3.3"
 
+gem "jsonpath"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
