--- a/server/Gemfile
+++ b/server/Gemfile
@@ -14,7 +14,7 @@ gem "interactor", "~> 3.0"
 
 gem "ruby-odbc", git: "https://github.com/Multiwoven/ruby-odbc.git"
 
-gem "multiwoven-integrations", "~> 0.33.5"
+gem "multiwoven-integrations", "~> 0.34.1"
 
 gem "temporal-ruby", github: "coinbase/temporal-ruby"
 
@@ -53,6 +53,7 @@ gem "pg_query"
 gem "rack-attack"
 gem "tzinfo-data", platforms: %i[windows jruby] # Timezone data
 # Third-Party Tools for Monitoring, Error Reporting, etc.
+gem "jsonpath"
 gem "newrelic_rpm"
 gem "solid_queue"
 gem "strong_migrations"
