--- a/.github/workflows/integrations-main.yml
+++ b/.github/workflows/integrations-main.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     name: Ruby ${{ matrix.ruby }}
     strategy:
       matrix:
