--- a/.github/workflows/server-docker-hub-push-tags-amd.yaml
+++ b/.github/workflows/server-docker-hub-push-tags-amd.yaml
@@ -12,6 +12,7 @@ on:
 jobs:
   docker-hub-push-on-merge:
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     env:
       RELEASE_TAG: ${{ github.event.client_payload.tag || github.event.inputs.release_tag }}
       RUN_LOGS_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
