--- a/.github/workflows/ui-docker-build-amd.yml
+++ b/.github/workflows/ui-docker-build-amd.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    timeout-minutes: 45
 
     steps:
       - name: Checkout Code
@@ -24,7 +25,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+
       - name: Build and Push Docker image
         uses: docker/build-push-action@v2
         with:
