--- a/.github/workflows/ui-docker-build-arm.yml
+++ b/.github/workflows/ui-docker-build-arm.yml
@@ -14,17 +14,18 @@ env:
 jobs:
   build_and_push:
     runs-on: [self-hosted, Linux, ARM64]
+    timeout-minutes: 45
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+
       - name: Build and Push Docker image
         uses: docker/build-push-action@v2
         with:
