feat(CE): fix git cliff action version to v4

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -82,7 +82,7 @@ jobs:
           client-payload: '{"tag": "${{ steps.versioning.outputs.new_tag }}"}'
 
       - name: Generate a changelog
-        uses: orhun/git-cliff-action@main
+        uses: orhun/git-cliff-action@v4
         id: git-cliff
         with:
           config: cliff.toml
