--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   # This section is for the Temporal services
   postgresql:
@@ -10,7 +9,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - /var/lib/postgresql/data
+      - temporal-pg-data:/var/lib/postgresql
   temporal:
     container_name: temporal
     depends_on:
@@ -53,7 +52,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
     volumes:
-      - mw-pg-data:/var/lib/postgresql/data
+      - mw-pg-data:/var/lib/postgresql
   redis:
     image: redis:latest
     volumes:
@@ -92,5 +91,6 @@ services:
     command: sh -c "./app/temporal/cli/register_namespace && ./app/temporal/cli/worker"
 # Volumes for the database and redis
 volumes:
+  temporal-pg-data:
   mw-pg-data:
   mw-redis-data:
